FDG-10952 fix to spacing issue

--- a/src/components/secondary-nav/secondary-nav.module.scss
+++ b/src/components/secondary-nav/secondary-nav.module.scss
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: column;
     align-self: flex-start;
-    padding: 0 1rem 0 0;
     min-width: 250px;
 
     .comingSoonContainer {
@@ -92,6 +91,6 @@
 
 .sectionList {
   list-style-type: none;
-  padding: 0;
+  padding: 0 1rem 0 0;
   margin: 0;
 }
